hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics7.php.like_types.exp
File "tconst_on_generics7.php", line 50, characters 43-43:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics7.php", line 38, characters 22-24:
Definition is here
File "tconst_on_generics7.php", line 50, characters 43-43:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics7.php", line 38, characters 16-17:
Definition is here
File "tconst_on_generics7.php", line 58, characters 14-23:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 38, characters 12-13:
Some type constraint(s) are violated here
File "tconst_on_generics7.php", line 38, characters 12-13:
T2 is a constrained type parameter
File "tconst_on_generics7.php", line 77, characters 21-23:
Expected int
File "tconst_on_generics7.php", line 38, characters 12-13:
But got dynamic
File "tconst_on_generics7.php", line 59, characters 11-12:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 38, characters 12-13:
Some type constraint(s) are violated here
File "tconst_on_generics7.php", line 38, characters 12-13:
T2 is a constrained type parameter
File "tconst_on_generics7.php", line 30, characters 18-23:
Expected string
File "tconst_on_generics7.php", line 50, characters 43-43:
  resulting from accessing the type constant 'T'
File "tconst_on_generics7.php", line 56, characters 12-20:
  on an object of type StringBox
File "tconst_on_generics7.php", line 38, characters 12-13:
But got dynamic
File "tconst_on_generics7.php", line 60, characters 11-12:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 38, characters 12-13:
Some type constraint(s) are violated here
File "tconst_on_generics7.php", line 38, characters 12-13:
T2 is a constrained type parameter
File "tconst_on_generics7.php", line 22, characters 18-20:
Expected int
File "tconst_on_generics7.php", line 50, characters 43-43:
  resulting from accessing the type constant 'T'
File "tconst_on_generics7.php", line 56, characters 26-31:
  on an object of type IntBox
File "tconst_on_generics7.php", line 38, characters 12-13:
But got dynamic
File "tconst_on_generics7.php", line 65, characters 28-36:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 38, characters 16-17:
Some type constraint(s) are violated here
File "tconst_on_generics7.php", line 38, characters 16-17:
T1 is a constrained type parameter
File "tconst_on_generics7.php", line 79, characters 35-45:
Expected ArraykeyBox
File "tconst_on_generics7.php", line 38, characters 16-17:
But got dynamic
File "tconst_on_generics7.php", line 50, characters 43-43:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics7.php", line 38, characters 22-24:
Definition is here
File "tconst_on_generics7.php", line 50, characters 43-43:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics7.php", line 38, characters 16-17:
Definition is here
File "tconst_on_generics7.php", line 66, characters 14-23:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 38, characters 12-13:
Some type constraint(s) are violated here
File "tconst_on_generics7.php", line 38, characters 12-13:
T2 is a constrained type parameter
File "tconst_on_generics7.php", line 77, characters 21-23:
Expected int
File "tconst_on_generics7.php", line 38, characters 12-13:
But got dynamic
File "tconst_on_generics7.php", line 71, characters 28-36:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 38, characters 16-17:
Some type constraint(s) are violated here
File "tconst_on_generics7.php", line 38, characters 16-17:
T1 is a constrained type parameter
File "tconst_on_generics7.php", line 79, characters 35-45:
Expected ArraykeyBox
File "tconst_on_generics7.php", line 38, characters 16-17:
But got dynamic
File "tconst_on_generics7.php", line 50, characters 43-43:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics7.php", line 38, characters 22-24:
Definition is here
File "tconst_on_generics7.php", line 52, characters 22-25:
You are trying to access the member getK but this is not an object, it is a dynamic value or an object of type Box (Typing[4062])
File "tconst_on_generics7.php", line 38, characters 22-24:
Definition is here
